<resources>
    <string name="app_name">Hersh Sheti</string>

    <!-- This is bottom navigetion items names start -->
    <string name="Bottom_N_home">घर</string>
    <string name="Bottom_N_bajar">बाजार</string>
    <string name="Bottom_N_andaje">अंदाज</string>
    <string name="Bottom_N_seva_dene_ghene">सेवा देणे घेणे</string>
    <string name="Bottom_N_par">पार</string>
    <!-- This is bottom navigetion items names close -->

    <!-- Bazar opetion elements names start -->
    <string name="sale">विकत घेणे</string>
    <string name="bay">विकत देणे</string>
    <!-- Bazar opetion elements names close -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- This is spinner choices start -->

    <string-array name="item_choise">
        <item>पर्याय निवडा</item>
    <!-- This is spinner (Kaddhanya) choices start -->
        <item>गहू</item>
        <item>बाजरी</item>
        <item>ज्वारी</item>
    <!-- This is spinner (Kaddhanya) choices close -->

    <!-- This is spinner (Palevhaji) choices start -->
        <item>मेथी</item>
        <item>कोथांबीर</item>
        <item>फ्लावर</item>
    <!-- This is spinner (Palevhaji) choices close -->

    <!-- This is spinner (Phale) choices start -->
        <item>आंबा</item>
        <item>केली</item>
        <item>चिकू</item>
    <!-- This is spinner (Phale) choices close -->
    </string-array>

    <!-- This is spinner choices close -->

</resources>
